WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231013
Regression (283158): Having unused TextIterator instance shouldn't crash if document is mutated
https://bugs.webkit.org/show_bug.cgi?id=231013
Summary
Regression (283158): Having unused TextIterator instance shouldn't crash if d...
Antti Koivisto
Reported
2021-09-30 02:28:09 PDT
We should disconnect line layout iterator cleanly when layout changes.
Attachments
Patch
(10.42 KB, patch)
2021-09-30 02:39 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(10.15 KB, patch)
2021-09-30 02:41 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(10.23 KB, patch)
2021-09-30 02:46 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Patch
(10.25 KB, patch)
2021-09-30 03:50 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2021-09-30 02:28:43 PDT
rdar://83690985
Antti Koivisto
Comment 2
2021-09-30 02:39:14 PDT
Created
attachment 439709
[details]
Patch
Antti Koivisto
Comment 3
2021-09-30 02:41:41 PDT
Created
attachment 439711
[details]
Patch
Antti Koivisto
Comment 4
2021-09-30 02:46:51 PDT
Created
attachment 439713
[details]
Patch
Antti Koivisto
Comment 5
2021-09-30 03:50:12 PDT
Created
attachment 439722
[details]
Patch
EWS
Comment 6
2021-09-30 07:53:42 PDT
Committed
r283311
(
242336@main
): <
https://commits.webkit.org/242336@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 439722
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug